Replace the dependency to Apache Commons for Base64 encoding by an Java included method.