@@ -3,9 +3,10 @@ package org.scribe.services;
 import javax.crypto.*;
 import javax.crypto.spec.*;
 
-import org.apache.commons.codec.binary.*;
 import org.scribe.exceptions.*;
 import org.scribe.utils.*;
+
+import sun.misc.BASE64Encoder;
 
 /**
  * HMAC-SHA1 implementation of {@SignatureService}
@@ -44,7 +45,7 @@ public class HMACSha1SignatureService implements SignatureService
     Mac mac = Mac.getInstance(HMAC_SHA1);
     mac.init(key);
     byte[] bytes = mac.doFinal(toSign.getBytes(UTF8));
-    return new String(Base64.encodeBase64(bytes)).replace(CARRIAGE_RETURN, EMPTY_STRING);
+    return new BASE64Encoder().encode(bytes).replace(CARRIAGE_RETURN, EMPTY_STRING);
   }
 
   /**
